<resources>
    <string name="app_name">NavigaTour</string>
    <string name="main_tsp">Go to TSP</string>
    <string name="main_locate">Nearby Restaurants</string>

    <string name="tsp_textView">Hello TSP</string>
    <string name="locateNearby_textview">Restaurants shown here</string>
    <string name="title_activity_tspresults">Map</string>

    <string name="menu_settings">Settings</string>
    <string name="function3">Discover your way around Singapore!</string>
    <string name="checkBoxChinese">checkBoxChinese</string>
    <string name="CBCtitle">"中文"</string>
    <string name="checkBoxYellow">checkBoxYellow</string>
    <string name="CBYtitle">Royal Theme</string>
    <string name="CBYon">Yellow</string>
    <string name="CBYoff">Red</string>
    <string name="checkBoxKey">checkBoxKey</string>
    <string name="CBKtitle">Larger Font</string>
    <string name="CBKon">Large</string>
    <string name="CBKoff">Normal</string>

    <string name="budgetText">What is your budget?</string>
    <string name="budgetTextChinese">您的预算是多少？</string>
    <string name="wantOptimal">I want the optimal solution!</string>
    <string name="wantOptimalChinese">我要最理想的路线</string>
    <string name="findStr">Find</string>
    <string name="findStrChinese">寻找路线</string>
</resources>
