<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:id="@+id/chkBoxLargeFont"
        android:defaultValue="false"
        android:key="checkBoxKey"
        android:summaryOff="Normal"
        android:summaryOn="Large"
        android:title="@string/CBKtitle" />
    <CheckBoxPreference
        android:id="@+id/chkBoxYellow"
        android:defaultValue="false"
        android:key="checkBoxYellow"
        android:summaryOff="@string/CBYoff"
        android:summaryOn="@string/CBYon"
        android:title="@string/CBYtitle"/>
    <CheckBoxPreference
        android:id="@+id/chkBoxChinese"
        android:defaultValue="false"
        android:key="checkBoxChinese"
        android:title="@string/CBCtitle"/>
</PreferenceScreen>